src/objects/Term__c.object
<CustomObject>
    <description>Term</description>
    <fields>
        <fullName>AidYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look-up to the &quot;Year&quot; custom object.</description>
        <inlineHelpText>This is a look-up to the &quot;Year&quot; custom object.</inlineHelpText>
        <label>Aid Year</label>
        <referenceTo>Year__c</referenceTo>
        <relationshipLabel>Term</relationshipLabel>
        <relationshipName>Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Term Description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date referenced the end date for the term.</description>
        <inlineHelpText>End Date referenced the end date for the term.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date referenced the start date for the term.</description>
        <inlineHelpText>Start Date referenced the start date for the term.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <description>Term Code is the code for the term.</description>
        <inlineHelpText>Term Code is the code for the term.</inlineHelpText>
        <label>Term Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Term</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Term</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>